--- a/static/lib/style.css
+++ b/static/lib/style.css
@@ -31,8 +31,10 @@
 :root {
   --black: rgb(33, 37, 41);
   --red: rgb(220, 53, 69);
+  --green: rgb(25, 135, 84);
   --blue: rgb(13, 110, 253);
   --yellow: rgb(255, 193, 7);
+  --purple: rgb(115, 51, 249);
 }
 html {
   height: 100%;
@@ -1264,9 +1266,17 @@ table.simple-table td {
   color: white;
   background: var(--red);
 }
+.red-bg {
+  color: white;
+  background: var(--green);
+}
 .blue-bg {
   color: white;
   background: var(--blue);
+}
+.purple-bg {
+  color: white;
+  background: var(--purple);
 }
 .yellow-border {
   border: solid 0.1rem var(--yellow);
@@ -1274,8 +1284,14 @@ table.simple-table td {
 .red-border {
   border: solid 0.1rem var(--red);
 }
+.green-border {
+  border: solid 0.1rem var(--green);
+}
 .blue-border {
   border: solid 0.1rem var(--blue);
+}
+.purple-border {
+  border: solid 0.1rem var(--purple);
 }
 .transparent {
   background: none;
