--- a/static/lib/style.css
+++ b/static/lib/style.css
@@ -257,6 +257,59 @@ img[src=""] {
   left: 0.5rem;
   background: white;
 }
+.checkbox input {
+  display: none;
+}
+.checkbox label {
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-left: 1.3rem;
+  padding-right: 0.2rem;
+  white-space: nowrap;
+  cursor: pointer;
+  user-select: none;
+}
+@keyframes bounceShrink {
+  20% { transform: scale(0.7); }
+  80% { transform: scale(1.3); }
+}
+.checkbox label::before {
+  content: "";
+  position: absolute;
+  left: 0rem;
+  top: 0.15rem;
+  width: 0.9rem;
+  height: 0.9rem;
+  border-radius: 100%;
+  border: 0.1rem solid fieldtext;
+  background: transparent;
+  margin-right: 0.2rem;
+  transform-origin: center;
+  transition: all ease 0.3s;
+}
+.checkbox input:checked + label::before {
+  transform: scale(1.1);
+  animation: bounceShrink 0.3s forwards;
+}
+.checkbox label::after {
+  content: "";
+  position: absolute;
+  display: block;
+  left: 0.25rem;
+  top: 0.4rem;
+  width: 0.6rem;
+  height: 0.6rem;
+  border-radius: 100%;
+  background: fieldtext;
+  transform-origin: center;
+  transform: scale(0%);
+  transition: all ease 0.2s;
+}
+.checkbox input:checked + label::after {
+  transform: scale(100%);
+  transition: all cubic-bezier(0, 1, 0.5, 1.5) 0.2s;
+}
 .modal {
   z-index: 20;
   display: flex;
@@ -592,17 +645,22 @@ img[src=""] {
   width: 90%;
   min-width: 20rem;
 }
-.input>select,
-.input>input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  display: inline-block;
+.input>*:nth-child(2) {
   width: 100%;
   padding: 0.2rem;
   background: field;
   box-shadow: inset 0.2rem 0.2rem 0.1rem 0 rgba(0, 0, 0, 0.2);
   border: solid 0.1rem var(--black);
   border-radius: 0 0.5rem 0.5rem 0;
+}
+.input>div {
+  height: 1.3rem;
+  display: flex;
+}
+.input>select,
+.input>input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 .input>select {
   height: 1.9rem;
